--- a/api/package.json
+++ b/api/package.json
@@ -13,9 +13,9 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
     "react-bootstrap": "^1.4.0",
     "request": "^2.88.2"
   }
-  
 }
