--- a/api/functions/package.json
+++ b/api/functions/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^8.1.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "request": "^2.88.2"
