--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,6 @@
   "main": "index.js",
   "devDependencies": {},
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "proxy": "http://localhost:5001/muse-eec76/us-central1/app/"
 }
