--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.32",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "axios": "^0.20.0",
-        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
-        "eslint": "^7.14.0",
         "firebase": "^8.1.1",
         "firebase-admin": "^9.4.1",
-        "font-awesome": "^4.7.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3"
+        "react-scripts": "^4.0.1",
+        "typescript": "^4.1.2"
     },
     "scripts": {
         "start": "react-scripts start",
