--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "reactjs-popup": "^2.0.4",
     "request": "^2.88.2"
   },
   "scripts": {
