--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 api/node_modules
 client/node_modules
 data-node
+client/.eslintcache
+.DS_Store
+client/.DS_Store
+api/.DS_Store
 
 # firebase stuff
 .firebaserc
@@ -11,4 +15,4 @@ database-debug.log
 database.rules.json
 firestore-debug.log
 ui-debug.log
-client/.eslintcache
+
