--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
