--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "request": "^2.88.2"
