--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "js-cookie": "^2.2.1",
         "qs": "^6.9.4",
         "react": "^17.0.1",
+        "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "^17.0.1",
         "react-promise-tracker": "^2.1.0",
         "react-router-dom": "^5.2.0",
