--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "qs": "^6.9.4",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-firebase-hooks": "^2.2.0",
         "react-promise-tracker": "^2.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.1",
