--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
         "js-cookie": "^2.2.1",
         "qs": "^6.9.4",
         "react": "^17.0.1",
+        "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "^17.0.1",
         "react-firebase-hooks": "^2.2.0",
         "react-promise-tracker": "^2.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.1",
+        "react-spinners": "^0.9.0",
         "request": "^2.88.2",
         "typescript": "^3.2.1"
     },
