New dependencies for sourcing env file

--- a/api/functions/package.json
+++ b/api/functions/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
+    "serve": "dotenv firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -16,6 +16,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv-cli": "^4.0.0",
     "express": "^4.17.1",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.2.0",
