--- a/api/functions/package.json
+++ b/api/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "atob": "^2.1.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv-cli": "^4.0.0",
