--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.21.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "firebase": "^8.1.1",
         "firebase-admin": "^9.4.1",
         "firebase-functions": "^3.12.0",
@@ -26,7 +27,7 @@
         "typescript": "^3.2.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "dotenv react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
